...
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">New…</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    
    <string name="select_all">Select all</string>
...

    <string name="list_headline_sprites">Objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>


    <!-- Action Mode Titles -->
...

    <!-- ScriptListFragment -->
    <string name="fragment_script_text_description">Tap \"+\" to add scripts</string>
    <!--  -->

    <!-- SpriteListFragment -->
    <string name="fragment_sprite_text_description">Tap \"+\" to add objects</string>
    <!--  -->

    <!-- LookListFragment -->
    <string name="fragment_look_text_description">Tap \"+\" to add looks</string>
    <string name="default_look_name">Look</string>
    <string name="select_look_from_gallery">Select Image</string>
...
